--- a/photos.html
+++ b/photos.html
@@ -68,12 +68,14 @@
     <h1>Box Moments</h1>
 
     <p class="page-description text-center">The following moments were captured from a 10' x 12' garden
-        box growing ten collard plants, which were allowed to flower. These ten flowering collard plants
+        box growing ten collard plants, which were allowed to flower.<br> These ten flowering collard plants
         fed thousands of bees a week, and then some.
     </p>
-    <p class="page-description text-center">Will you join us? Help us feed bees high-quality pollen and nectar. Start your garden box today.
-        Remember your binoculars. Save Bees Grow Heirloom Seeds and make the world a better place forever.
-    </p>
+    <p class="page-description text-center">Will you join us? Help us feed bees high-quality pollen and nectar.<br>
+    Start your garden box today.<br>
+    Remember your binoculars.<br>
+    Save bees by growing heirloom seeds and make the world a better place.</p>
+  
     
     <div class="tz-gallery">
 
