--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 
                 </p>
             </header>
-            <span class="scroll-hint">Scroll Down</span>
+            <span class="scroll-hint"><h1>Scroll Down</h1></span>
         </div>
 
         <nav>
@@ -73,17 +73,17 @@
             <article id="cb02" class="content-block">
                 <div class="wrapper">
                     <header class="slideInUp">
-                        <h1>Humans Have 4 Years to Leave When the Last Bee Dies</h1>
+                        <h1>Humans Have 4 Years Before Extinction After the Last Bee Dies</h1>
                     </header>
                     <section>
                         <p class="slideInUp slideInUp2">
-                            <h1>Since 1902&mdash;number of bee colonies per hectare have decreased 
+                            <h1 align="left">Since 1902&mdash;number of bee colonies per hectare have decreased 
                                         90%.
                                     </h1>
-                            <h3>1976&mdash;76 million hives</h3>
-                            <h3>2008&mdash;24 million hives = 60% reduction</h3>
-                            <h3>2018&mdash;30% of bees have disappeared</h3>
-                            <h1>1/4 of world's 250 bees species are facing extinction</h1>
+                            <h1 align="left">1976&mdash;76 million hives</h3>
+                            <h1 align="left">2008&mdash;24 million hives = 60% reduction</h3>
+                            <h1 align="left">2018&mdash;30% of bees have disappeared,</h3>
+                            <h1 align="left">1/4 of World's 250 bees species are facing extinction</h1>
                         </p>
                     </section>
                 </div> <!-- .wrapper -->
