--- a/about.html
+++ b/about.html
@@ -63,31 +63,33 @@
         <div><h1><Strong>The Green Revolution</Strong></h1>
         </div>
         <div>
-        <p>We all hear things about how Monsanto, and a handful of other
+        Most of us have heard the grumblings about how Monsanto and a handful of other
             seed, pesticide, and fertilizer conglomerates are bad, but the sad reality is that we
             could not provide enough food for the 7.6 billion people on this planet without chemical
             fertilzer.
-        </p>
+        
        </div>
       <div><h2>Hybrid Seeds</h2></div>
-            Hybrid seeds were developed starting in the 1930's by cross-pollinating plants over several decades,
-            selecting for highest yield. At the time, the driving force behind developing hybrids was figuring out a way
-            to stop world wide faminine as world population swelled. Scientists worked feverishly, much as a cure
+            Starting in the 1930's, hybrid seeds were developed by cross-pollinating plants over several decades,
+            selecting for highest yield. At the time, the sheer driving force behind developing hybrids was figuring out a way
+            to stop world-wide faminine, as world population swelled. Scientists worked feverishly, much as when a cure
             for polio was sought, to find a way to meet the food needs of the world's growing population. 
             Without the development of hybrid seeds, we would not have been able to meet the demands of world popluation 
-            growth.
+            growth. Hybrid seeds prevented global faminine and starvation.
         <div><h2>The Road to Hell is Paved with Good Intentions</h2></div>
 
-       <div><p>Sadly, technological advances, which improve our quality of life,
+       <div>Sadly, technological advances, which improve our quality of life,
           often have unintended consequences. In the case of hybrid seeds, a few
               unforeseen things occurred.
-              <ul><li>Hybrid seed produce very high yields the first year of growth. The second year, hybrid seed plants lose their "vigor", 
-                requiring farmers to rebuy their seeds.</li>
+              <ul>
+
+              <li>Hybrid seed produce very high yields the first year of growth. The second year, hybrid seed plants lose their "vigor", 
+                requiring farmers to re-buy seeds year over year.</li>
                 <li>Hybrid seeds require a lot of water, pesticides, and fertilizer to grow well.</li>
                 <li>Farmers abandoned heirloom seeds for the next big thing: seeds producing high-yield, high-profits. 
                   As a result, the world, and humanity, experienced a mass extinction (over 75%) of region-specific, heirloom seeds. 
                   </li>
-              </ul></p>
+              </ul>
               </div>
 
               <div><h2>Where We Are Today</h2></div>
@@ -98,14 +100,14 @@
                 fertilizers and pesticides used to prevent world hunger. Even organic
               food isn't truly organic. 
               There is a small movement to return to the kitchen gardens of our grandparents,
-            grow heirloom organic produce, and saving seeds.</p></div>
+            grow heirloom organic produce, and save heirloom seeds.</p></div>
 
             <div><h2>What Does This Have to Do With Bees?!</h2></div>
             <div><h3 class="animated infinite flash">Absolutely Everything</h3></div> 
 
 
            <div><p> Bees, and pollinators, are dying in record numbers. No one knows for sure why. 
-            The following are reasons currently believed to be causing bees to die:
+            The following reasons are currently believed contributors to bee extinction:
             <ul><li>Fertilizers</li>
               <li>Pesticides</li>
               <li>Mites</li>
@@ -113,7 +115,7 @@
               <li>Cell phone radio waves</li>
               <li class="animated infinite flash"><strong>Poor quality food</strong></li>
               
-            </li></ul> Save Bees Grow Heirloom Seeds believes that heirloom pollen and nectar is a way to provide bees with the 
+            </li></ul> Save Bees Grow Heirloom Seeds believes that heirloom pollen and nectar provides bees with the 
             best source of nutrition available.</p></div>
 
           <div><p>For more information about the Green Revolution, 
