--- a/index.html
+++ b/index.html
@@ -73,17 +73,16 @@
             <article id="cb02" class="content-block">
                 <div class="wrapper">
                     <header class="slideInUp">
-                        <h1>Humans Have 4 Years Before Extinction After the Last Bee Dies</h1>
+                        <h1>When the Last Bee Dies 4 Years Before Human Extinction</h1>
                     </header>
                     <section>
                         <p class="slideInUp slideInUp2">
-                            <h1 align="left">Since 1902&mdash;number of bee colonies per hectare have decreased 
-                                        90%.
-                                    </h1>
-                            <h1 align="left">1976&mdash;76 million hives</h3>
-                            <h1 align="left">2008&mdash;24 million hives = 60% reduction</h3>
-                            <h1 align="left">2018&mdash;30% of bees have disappeared,</h3>
-                            <h1 align="left">1/4 of World's 250 bees species are facing extinction</h1>
+                        Since 1902, the number of bee colonies per hectare have decreased 
+                                        90%.<br>
+                                    
+                        In 1976, there were 76 million bees hives.
+                        In 2008, the total number of bees dropped 60% to 24 million hives.
+                        In 2018, 30% of bees have disappeared<br> and 1/4 of the World's 250 bees species are facing extinction.
                         </p>
                     </section>
                 </div> <!-- .wrapper -->
