--- a/photos.html
+++ b/photos.html
@@ -67,12 +67,12 @@
 
     <h1>Box Moments</h1>
 
-    <p class="page-description text-center">The following moments were captured from a 10' x 12' garden
-        box growing ten collard plants, which were allowed to flower.<br> These ten flowering collard plants
-        fed thousands of bees a week, and then some.
+    <p class="page-description text-center"><h3>The following moments were captured from a 10' x 12' garden
+        box growing ten flowering heirloom collards. These collards fed thousands of
+        bees.</h3>
     </p>
-    <p class="page-description text-center">Will you join us? Help us feed bees high-quality pollen and nectar.<br>
-    Start your garden box today. Save bees by growing heirloom seeds and make the world a better place.</p>
+    <p class="page-description text-center"><h3>Will you join us? Help us feed bees high-quality pollen and nectar.
+    Start your garden box today. Save bees by growing heirloom seeds and make the world a better place.</h3></p>
   
     
     <div class="tz-gallery">
