--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                     
                         In 1976, there were 76 million bees hives.
                         In 2008, the total number of bees dropped 60% to 24 million hives.
-                        In 2018, 30% of bees have disappeared<br> and 1/4 of the World's 250 bees species are facing extinction.
+                        <br>2018, 30% of bees have disappeared<br> and 1/4 of the World's 250 bees species are facing extinction.
                         </p>
                     </section>
                 </div> <!-- .wrapper -->
