--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -44,7 +44,7 @@
                 <a class="nav-link" href="feedthousandsofbees.html">Feed Thousands of Bees</a>
               </li>
               <li class="nav-item">
-                    <a class="nav-link" href="photos.html">Box Moments</a>
+                    <a class="nav-link" href="photos.html">Gallery</a>
                   </li>
               <li class="nav-item">
                   <a class="nav-link" href="#"></a>
