--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                 <div class="bcg"></div>
                 <div class="wrapper">
                     <header class="slideInUp">
-                        <h1>Bees Are Starving</h1>
+                        <h1><font color="ffffff">Bees Are Starving</h1>
                     </header>
                     <section>
                         <p class="slideInUp slideInUp2">Bees do not have high-quality food sources anymore.
-                        </p>
+                            </font></p>
                     </section>
                 </div> <!-- .wrapper -->
             </article>
