--- a/photos.html
+++ b/photos.html
@@ -53,6 +53,12 @@
                   <li class="nav-item">
                       <a class="nav-link" href="#"></a>
                     </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="photos.html">Gallery</a>
+                          </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"></a>
+                          </li>
                  
                 </ul>
                 
@@ -65,7 +71,7 @@
 
 <div class="container gallery-container">
 
-    <h1>Box Moments</h1>
+    <h1>Gallery</h1>
 
     <p class="page-description text-center"><h3>The following moments were captured from a 10' x 12' garden
         box growing ten flowering heirloom collards. These collards fed thousands of
