--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -73,8 +73,10 @@
             Most of our grandparents had kitchen gardens. Today, fewer than 20% of
             Amerian households have kitchen gardens. 
             
+            
             There are many advantages to having kitchen gardens, all of
             which are hard to rank, but up at the top is feeding thousands of bees the heirloom pollen and nectar. 
+            <br><IMG SRC="2.gif">
         </p>
        </div>
        <div><p>At Save Bees, Grow Heirloom seeds, we did an experiment. We set up a 10' x 12' garden box. We decided
@@ -102,6 +104,7 @@
                 </li>
                 <li>When the plants flower, enjoy feeding thousands of bees a week.</li>
         </ol>
+        <IMG SRC="3.gif"><br>
         <img src="img/box3.jpg" class="img-fluid" alt="Responsive image">
         <p>You can invest as much time as you want into your kitchen garden. You can find heirloom seed online. 
             Some nurseries
