--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -68,7 +68,7 @@
             Helping bees,
             and pollinators, is easy. If you have a <br><strong>10' x 12'</strong> mostly sunny spot in your backyard, you 
             can start a kitchen garden and grow heirloom seeds. 
-            <img src="/box1.jpg" class="img-fluid" alt="Responsive image">
+            <img src="box1.jpg" class="img-fluid" alt="Responsive image">
             
             Most of our grandparents had kitchen gardens. Today, fewer than 20% of
             Amerian households have kitchen gardens. 
