--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -86,7 +86,7 @@
            insects.
        </p></div>
       <div><h2>Installing a 10' x 12' Garden Box</h2></div>
-      <img src="img/box2.jpg" class="img-fluid" alt="Responsive image">
+      <img src="box2.jpg" class="img-fluid" alt="Responsive image">
             <p>Installing a 10' x 12' garden box doesn't take a lot of time. You don't even have to put 
             lot of effort into it. You can throw down newspapers or landscaping fabric, and cover with only
             an inch or two of soil, like Save Bees Grow Heirloom Seeds did to start their box.</p>
@@ -105,17 +105,17 @@
                 <li>When the plants flower, enjoy feeding thousands of bees a week.</li>
         </ol>
         <IMG SRC="3.gif"><br>
-        <img src="img/box3.jpg" class="img-fluid" alt="Responsive image">
+        <img src="box3.jpg" class="img-fluid" alt="Responsive image">
         <p>You can invest as much time as you want into your kitchen garden. You can find heirloom seed online. 
             Some nurseries
             carry them. Heirloom seeds require nuturing to grow, but they 
             do not require vasts amounts of water, fertlizer, or pesticides.
         </p>
-        <img src="img/plant.jpg" class="img-fluid" alt="Responsive image">
+        <img src="plant.jpg" class="img-fluid" alt="Responsive image">
         <div class="animated pulse infinite"><strong>"If every US citizen ate one meal of organic produce a week it would reduce
                 the country's oil consumption by 1.1 M barrels per week."<br>&#8212; Barbara Kingsolver</strong>
             </div>
-        <img src="img/plant1.jpg" class="img-fluid" alt="Responsive image">
+        <img src="plant1.jpg" class="img-fluid" alt="Responsive image">
         <div><h2>Benefits of the Kitchen Garden</h2></div>
 
        <div><p>The kitchen garden has a pthleora of benefits, not the least of which, 
@@ -153,7 +153,7 @@
               </ol></p>
               *<strong>#growyourown</strong> is a small movement, dedicated to homegrown produce.
 
-              <img src="img/plant3.jpg" class="img-fluid" alt="Responsive image">
+              <img src="plant3.jpg" class="img-fluid" alt="Responsive image">
               </div>
               
         </div>
