--- a/photos.html
+++ b/photos.html
@@ -85,93 +85,93 @@
 
         <div class="row">
             <div class="col-sm-12 col-md-4">
-                <a class="lightbox" href="img/2.jpg">
-                    <img src="img/2.jpg" alt="">
+                <a class="lightbox" href="2.jpg">
+                    <img src="2.jpg" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/3.jpg">
-                    <img src="img/3.jpg" alt="">
+                <a class="lightbox" href="3.jpg">
+                    <img src="3.jpg" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/4.jpg">
-                    <img src="img/4.jpg" alt="">
+                <a class="lightbox" href="4.jpg">
+                    <img src="4.jpg" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="img/5.jpg">
-                    <img src="img/5.jpg" alt="">
+                <a class="lightbox" href="5.jpg">
+                    <img src="5.jpg" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="img/6.jpg">
-                <img src="img/6.jpg" alt="">
+                    <a class="lightbox" href="6.jpg">
+                <img src="6.jpg" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/7.jpg">
-                    <img src="img/7.jpg" alt="">
+                <a class="lightbox" href="7.jpg">
+                    <img src="7.jpg" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="img/8.jpg">
-                    <img src="img/8.jpg" alt="">
+                <a class="lightbox" href="8.jpg">
+                    <img src="8.jpg" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/9.jpg">
-                    <img src="img/9.jpg" alt="">
+                <a class="lightbox" href="9.jpg">
+                    <img src="9.jpg" alt="">
                  </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/10.jpg">
-                    <img src="img/10.jpg" alt="">
+                <a class="lightbox" href="10.jpg">
+                    <img src="10.jpg" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="img/11.jpg">
-                    <img src="img/11.jpg" alt="">
+                <a class="lightbox" href="11.jpg">
+                    <img src="11.jpg" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/12.jpg">
-                    <img src="img/12.jpg" alt="">
+                <a class="lightbox" href="12.jpg">
+                    <img src="12.jpg" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/13.jpg">
-                    <img src="img/13.jpg" alt="">
+                <a class="lightbox" href="13.jpg">
+                    <img src="13.jpg" alt="">
                     </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="img/14.jpg">
-                    <img src="img/14.jpg" alt="">
+                <a class="lightbox" href="14.jpg">
+                    <img src="14.jpg" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/15.jpg">
-                    <img src="img/15.jpg" alt="">
+                <a class="lightbox" href="15.jpg">
+                    <img src="15.jpg" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/16.jpg">
-                    <img src="img/16.jpg" alt="">
+                <a class="lightbox" href="16.jpg">
+                    <img src="16.jpg" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="img/17.jpg">
-                    <img src="img/17.jpg" alt="">
+                <a class="lightbox" href="17.jpg">
+                    <img src="17.jpg" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/18.jpg">
-                    <img src="img/18.jpg" alt="">
+                <a class="lightbox" href="18.jpg">
+                    <img src="18.jpg" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/19.jpg">
-                    <img src="img/19.jpg" alt="">
+                <a class="lightbox" href="19.jpg">
+                    <img src="19.jpg" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
