--- a/photos.html
+++ b/photos.html
@@ -85,7 +85,7 @@
 
         <div class="row">
             <div class="col-sm-12 col-md-4">
-                <a class="lightbox" href="2.jpg">
+                <a class="lightbox" href="//CynthiaLondon.github.io/2.jpg">
                     <img src="2.jpg" alt="">
                 </a>
             </div>
