--- a/photos.html
+++ b/photos.html
@@ -86,7 +86,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-4">
                 <a class="lightbox" href="////raw.githubusercontent.com/CynthiaLondon/cynthialondon.github.io/master//2.jpg">
-                    <img src="2.jpg" alt="">
+                    <img src="2.JPGS" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
