--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -153,7 +153,7 @@
               </ol></p>
               *<strong>#growyourown</strong> is a small movement, dedicated to homegrown produce.
 
-              <img src="plant3.JPG" class="img-fluid" alt="Responsive image">
+              <img src=".img/plant3.JPG" class="img-fluid" alt="Responsive image">
               </div>
               
         </div>
