--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -68,7 +68,7 @@
             Helping bees,
             and pollinators, is easy. If you have a <br><strong>10' x 12'</strong> mostly sunny spot in your backyard, you 
             can start a kitchen garden and grow heirloom seeds. 
-            <img src="box1.jpg" class="img-fluid" alt="Responsive image">
+            <img src=".img/box1.jpg" class="img-fluid" alt="Responsive image">
             
             Most of our grandparents had kitchen gardens. Today, fewer than 20% of
             Amerian households have kitchen gardens. 
@@ -105,17 +105,17 @@
                 <li>When the plants flower, enjoy feeding thousands of bees a week.</li>
         </ol>
         <IMG SRC="3.gif"><br>
-        <img src="box3.jpg" class="img-fluid" alt="Responsive image">
+        <img src=".img/box3.jpg" class="img-fluid" alt="Responsive image">
         <p>You can invest as much time as you want into your kitchen garden. You can find heirloom seed online. 
             Some nurseries
             carry them. Heirloom seeds require nuturing to grow, but they 
             do not require vasts amounts of water, fertlizer, or pesticides.
         </p>
-        <img src="plant.jpg" class="img-fluid" alt="Responsive image">
+        <img src=".img/plant.jpg" class="img-fluid" alt="Responsive image">
         <div class="animated pulse infinite"><strong>"If every US citizen ate one meal of organic produce a week it would reduce
                 the country's oil consumption by 1.1 M barrels per week."<br>&#8212; Barbara Kingsolver</strong>
             </div>
-        <img src="plant1.jpg" class="img-fluid" alt="Responsive image">
+        <img src=".img/plant1.jpg" class="img-fluid" alt="Responsive image">
         <div><h2>Benefits of the Kitchen Garden</h2></div>
 
        <div><p>The kitchen garden has a pthleora of benefits, not the least of which, 
