--- a/photos.html
+++ b/photos.html
@@ -85,7 +85,7 @@
 
         <div class="row">
             <div class="col-sm-12 col-md-4">
-                <a class="lightbox" href="////raw.githubusercontent.com/CynthiaLondon/cynthialondon.github.io/master//2.JPG">
+                <a class="lightbox" href="2.JPG">
                     <img src="2.JPG" alt="">
                 </a>
             </div>
