--- a/photos.html
+++ b/photos.html
@@ -73,12 +73,12 @@
 
     <h1>Gallery</h1>
 
-    <p class="page-description text-center"><h3>The following moments were captured from a 10' x 12' garden
+    <p class="page-description text-center"><h3><font color="ffffff">The following moments were captured from a 10' x 12' garden
         box growing ten flowering heirloom collards. These collards fed thousands of
         bees.</h3>
     </p>
     <p class="page-description text-center"><h3>Will you join us? Help us feed bees high-quality pollen and nectar.
-    Start your garden box today. Save bees by growing heirloom seeds and make the world a better place.</h3></p>
+    Start your garden box today. Save bees by growing heirloom seeds and make the world a better place.</h3></font></p>
   
     
     <div class="tz-gallery">
