--- a/photos.html
+++ b/photos.html
@@ -75,9 +75,9 @@
 
     <p class="page-description text-center"><h3><font color="ffffff">The following moments were captured from a 10' x 12' garden
         box growing ten flowering heirloom collards. These collards fed thousands of
-        bees.</h3>
+        bees.</font></h3>
     </p>
-    <p class="page-description text-center"><h3>Will you join us? Help us feed bees high-quality pollen and nectar.
+    <p class="page-description text-center"><h3><font color="ffffff"></font>Will you join us? Help us feed bees high-quality pollen and nectar.
     Start your garden box today. Save bees by growing heirloom seeds and make the world a better place.</h3></font></p>
   
     
