--- a/photos.html
+++ b/photos.html
@@ -71,7 +71,7 @@
 
 <div class="container gallery-container">
 
-    <h1>Gallery</h1>
+    <h1><font color:#ffffff>Gallery</h1></font>
 
     <p class="page-description text-center"><h3><font color="ffffff">The following moments were captured from a 10' x 12' garden
         box growing ten flowering heirloom collards. These collards fed thousands of
