--- a/photos.html
+++ b/photos.html
@@ -71,14 +71,15 @@
 
 <div class="container gallery-container">
 
-    <h1><font color:#ffffff>Gallery</h1></font>
+    <h1><font color="#ffffff">Gallery</font></h1>
 
     <p class="page-description text-center"><h3><font color="ffffff">The following moments were captured from a 10' x 12' garden
         box growing ten flowering heirloom collards. These collards fed thousands of
         bees.</font></h3>
     </p>
-    <p class="page-description text-center"><h3><font color="ffffff"></font>Will you join us? Help us feed bees high-quality pollen and nectar.
-    Start your garden box today. Save bees by growing heirloom seeds and make the world a better place.</h3></font></p>
+    <p class="page-description text-center"><h3><font color="#ffffff">Will you join us? Help us feed bees high-quality pollen and nectar.
+    Start your garden box today. Save bees by growing heirloom seeds and make the world a better place.</h3></font><br>
+    <p><font color="#ffffff">Click the first photo below to start the photo album.</font></p>
   
     
     <div class="tz-gallery">
