--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -117,7 +117,7 @@
         </div>
     
                    
-        <a href="http://www.whatsonmyfood.org/index.jsp?source=banner"><img src="http://www.whatsonmyfood.org/images/web_banner_color468x60.jpg" alt="Find out what's on your food at: whatsonmyfood.org" width="468" height="60" border="0"></a>
+        <a href="http://www.whatsonmyfood.org/index.jsp?source=banner"><img src="http://www.whatsonmyfood.org/images/web_banner_color468x60.JPGS" alt="Find out what's on your food at: whatsonmyfood.org" width="468" height="60" border="0"></a>
 </div>
 </div>         
 
