--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -117,7 +117,8 @@
         </div>
     
                    
-        <a href="http://www.whatsonmyfood.org/index.jsp?source=banner"><img src="http://www.whatsonmyfood.org/images/web_banner_color468x60.JPG" alt="Find out what's on your food at: whatsonmyfood.org" width="468" height="60" border="0"></a>
+        <script src="http://widget.whatsonmyfood.org/widget/widget-script.js" type="text/javascript"></script>
+<div id="whatsonmyfood-widget-container" style="width:200px; height:319px"></div>
 </div>
 </div>         
 
