--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <article id="cb03" class="content-block">
                     <div class="wrapper">
                             <header class="slideInUp">
-                                    <img src="savebees.JPG">
+                                    <img src="savebees.jpg">
                                 
                                 </header>
                                 <section>
