--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -114,7 +114,7 @@
       </div>
       
                    
-        <a href="http://www.whatsonmyfood.org/index.jsp?source=banner"><img src="What.JPG" alt="Find out what's on your food at: whatsonmyfood.org" width="800" height="80" border="0"></a>
+        <a href="http://www.whatsonmyfood.org"><img src="What.JPG" class="img-fluid" alt="Find out what's on your food at: whatsonmyfood.org"></a>
         <div class="animated pulse infinite"><strong>"You can't connect the dots looking forward, you can only connect the them looking
           backward"&#8212;Steve Jobs</strong>
         </div>
