--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <article id="cb02" class="content-block">
                 <div class="wrapper">
                     <header class="slideInUp">
-                        <h1>When the Last Bee Dies 4 Years Before Human Extinction</h1>
+                        <h1>If Bees Go Extinct, 4 Years Before Human Extinction</h1>
                     </header>
                     <section>
                         <p class="slideInUp slideInUp2">
