--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -86,7 +86,7 @@
            insects.
        </p></div>
       <div><h2>Installing a 10' x 12' Garden Box</h2></div>
-      <img src="box2.JPF" class="img-fluid" alt="Responsive image">
+      <img src="box2.JPG" class="img-fluid" alt="Responsive image">
             <p>Installing a 10' x 12' garden box doesn't take a lot of time. You don't even have to put 
             lot of effort into it. You can throw down newspapers or landscaping fabric, and cover with only
             an inch or two of soil, like Save Bees Grow Heirloom Seeds did to start their box.</p>
