--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <article id="cb02" class="content-block">
                 <div class="wrapper">
                     <header class="slideInUp">
-                        <h1>Bee Extinction = Human Extinction</h1>
+                        <h1>Bee Extinction = End of World As We Know It</h1>
                     </header>
                     <section>
                         <p class="slideInUp slideInUp2">
@@ -84,6 +84,7 @@
                         In 2008, the total number of bees dropped 60% to 24 million hives.
                         <br>As of 2018, 30% of bees have disappeared<br> and 1/4 of the World's 250 bees species are facing extinction.
                         </p>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/7X1xIIyZw3M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     </section>
                 </div> <!-- .wrapper -->
             </article>
