--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <nav>
             <ul>
                 <li><a href="#intro"><span class="nav-dot"></span><span class="nav-label">Bees Are Dying</span></a></li>
-                <li><a href="#slide01"><span class="nav-dot"></span><span class="nav-label">lack of Quality Food</span></a></li>
+                <li><a href="#slide01"><span class="nav-dot"></span><span class="nav-label">Lack of Quality Food</span></a></li>
                 <li><a href="#slide02"><span class="nav-dot"></span><span class="nav-label">How Can You Help?</span></a></li>
                 <li><a href="#slide03"><span class="nav-dot"></span><span class="nav-label">Learn More</span></a></li>
             </ul>
