--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </article>
 
             <article id="slide02" class="slide fs">
-                <div class="bcg"></div>
+                <div class="bcg"><img src="bee03.JPG" class="img-fluid" alt="Responsive image"></div>
                 <div class="wrapper">
                     <header class="slideInUp">
                        
@@ -109,7 +109,7 @@
             </article>
 
             <article id="slide03" class="slide fs">
-                <div class="bcg"></div>
+                <div class="bcg"><img src="bee04.JPG" class="img-fluid" alt="Responsive image"></div>
                 <div class="wrapper">
                    
                 </div> <!-- .wrapper -->
