--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <![endif]-->
 
         <div id="intro" class="header-container fs">
-            <div class="bcg"></div>
+            <div class="bcg"><img src="6.JPG" class="img-fluid" alt="Responsive image"></div>
             <header class="wrapper">
                 <h1 class="title">
                     <h1></h1>
@@ -58,7 +58,7 @@
             </article>
             
             <article id="slide01" class="slide fs">
-                <div class="bcg"></div>
+                <div class="bcg"><img src="25.JPG" class="img-fluid" alt="Responsive image"></div>
                 <div class="wrapper">
                     <header class="slideInUp">
                         <h1><font color="ffffff">Bees Are Starving</h1>
