god is good, all the time

--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -60,7 +60,7 @@
       <!-- Navbar end -->
       <!--begin container> -->
         <div class="well"><div class="container">
-        <div><h1 class="animated bounceIn infinite"><strong>Feed Thousands of Bees</strong></h1>
+        <div><h1 class="animated bounceInLeft infinite"><strong>Feed Thousands of Bees</strong></h1>
         </div>
         <div>
         <p>When they hear about the plight of bees, many people want to help, but they aren't sure
