pull audio because of video

--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
                     </header>
                     <section>
                         <p class="slideInUp slideInUp2">
-                        Since 1902, the number of bee colonies per hectare have decreased 
+                        <align: left>Since 1902, the number of bee colonies per hectare have decreased 
                                         90%.<br>
                                     
                         In 1976, there were 76 million bees hives.
                         In 2008, the total number of bees dropped 60% to 24 million hives.
-                        <br>As of 2018, 30% of bees have disappeared<br> and 1/4 of the World's 250 bees species are facing extinction.
-                        </p>
+                        <br>As of 2018, 30% of bees have disappeared and 1/4 of the World's 250 bees species are facing extinction.
+                    </align></p>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/7X1xIIyZw3M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     </section>
                 </div> <!-- .wrapper -->
@@ -164,6 +164,6 @@
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script>
-        <audio src="dotan.mp3" class-"music" controls autoplay></audio>
+        
     </body>
 </html>
