--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </header>
                     <section>
                         <p class="slideInUp slideInUp2">
-                        <align: left>Since 1902, the number of bee colonies per hectare have decreased 
+                        <text-align: left>Since 1902, the number of bee colonies per hectare have decreased 
                                         90%.<br>
                                     
                         In 1976, there were 76 million bees hives.
@@ -138,8 +138,9 @@
                 <h6>2018 &copy; <a href="https://savebeesgrowheirloomseeds.com" target="_blank">savebeesgrowheirloomseeds.com</a> 
                     | <a href="https://twitter.com/savebeesgrowheirloomseeds" target="_blank">@savebeesgrowheirloomseeds</a> 
                     | <a href="https://www.instagram.com/savebeesgrowheirloomseeds/" target="_blank">#savebeesgrowheirloomseeds</a>
-                    <br> Images by <a href="http://www.instagram.com/_CynthiaLondon_" target="_blank">#_cynthialondon_</a> 
+                    <br> Images by <a href="http://www.instagram.com/_CynthiaLondon_" target="_blank">#_cynthialondon_ </a> &hearts;
                     </h6>
+                    
             </footer>
         </div>
 
