--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
               <a href="https://savebeesgrowheirloomseeds.com/" target="_blank">savebeesgrowheirloomseeds.com</a> 
              
               | <a href="https://www.instagram.com/savebeesgrowheirloomseeds/" target="_blank">#savebeesgrowheirloomseeds</a>
-              <br> Images by <a href="http://www.instagram.com/_CynthiaLondon_" target="_blank">#_cynthialondon_</a> </p>
+              <br> Images by <a href="http://www.instagram.com/_CynthiaLondon_" target="_blank">#_cynthialondon_</a> &hearts;</p>
     </div>
   </div>
   <audio src="dotan.mp3" class-"music" controls autoplay></audio>
