--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -119,7 +119,7 @@
         <div><h2>Benefits of the Kitchen Garden</h2></div>
 
        <div><p>The kitchen garden has a pthleora of benefits, not the least of which, 
-           if heirloom pollen and nectar is the very best for bees, besides from wildcrafted plants, 
+           if heirloom pollen and nectar is the very best for bees (besides from wildcrafted plants), 
            heirloom produce is the very best source of produce
            available for humans. While it's not feasible to completely source your nutritive
         needs from a kitchen garden, you can supplement your diet as much as you can with the 
@@ -130,7 +130,7 @@
                   wildlife your 10' x 12' box supports. Our 10' x 12' garden box hosted aphids, 
                   ladybugs,
                   beatles, bees, snakes, and butterflies, to name a few. Standing near your box
-                   when it is buzzing with bees, knowing you created that happy, healthy buzz,
+                   when it is buzzing with bees, knowing you created that happy and healthy buzz,
                   is a rewarding sound like no other. Binoculars are recommended kitchen
                   garden box accessories. Sitting and bee watching
                   is fascinating.</p>
