--- a/about.html
+++ b/about.html
@@ -59,6 +59,10 @@
   
       <!-- Navbar end -->
       <!--begin container> -->
+      <style>
+          body {background-color:#b3b5b8;
+          }
+        </style>
         <div class="well"><div class="container">
         <div><h1><Strong>The Green Revolution</Strong></h1>
         </div>
