--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -21,7 +21,10 @@
    
 </head>
 
-<body>
+<body><style>
+  body {background-color:#b3b5b8;
+  }
+</style>
       <!-- Navbar start -->
   <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
