--- a/photos.html
+++ b/photos.html
@@ -70,6 +70,10 @@
           <!-- Navbar end -->
 
 <div class="container gallery-container">
+        <style>
+                body {background-color:#b3b5b8;
+                }
+              </style>
 
     <h1><font color="#ffffff">Gallery</font></h1>
 
