--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -60,9 +60,9 @@
       <!-- Navbar end -->
       <!--begin container> -->
       <style>
-            body {background-color:#b3b5b8;
-            }
-          </style>
+body {background-color:#c7cdd3;
+  }
+</style>
         <div class="well"><div class="container">
         <div><h1 class="animated bounceInLeft infinite"><strong>Feed Thousands of Bees</strong></h1>
         </div>
