--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -22,7 +22,7 @@
 </head>
 
 <body><style>
-  body {background-color:#b3b5b8;
+body {background-color:#c7cdd3;
   }
 </style>
       <!-- Navbar start -->
