--- a/photos.html
+++ b/photos.html
@@ -71,9 +71,9 @@
 
 <div class="container gallery-container">
         <style>
-                body {background-color:#b3b5b8;
-                }
-              </style>
+body {background-color:#c7cdd3;
+  }
+</style>
 
     <h1><font color="#ffffff">Gallery</font></h1>
 
