--- a/about.html
+++ b/about.html
@@ -88,10 +88,10 @@ body {background-color:#c7cdd3;
               <ul>
 
               <li>Hybrid seed produce very high yields the first year of growth. The second year, hybrid seed plants lose their "vigor", 
-                requiring farmers to re-buy seeds year over year.</li>
+                requiring farmers to rebuy seeds year-over-year.</li>
                 <li>Hybrid seeds require a lot of water, pesticides, and fertilizer to grow well.</li>
-                <li>Farmers abandoned heirloom seeds for the next big thing: seeds producing high-yield, high-profits. 
-                  As a result, the world, and humanity, experienced a mass extinction (over 75%) of region-specific, heirloom seeds. 
+                <li>Farmers abandoned heirloom seeds for the next big thing: seeds producing high-yield and high-profits. 
+                  As a result, the world, and humanity, experienced a mass extinction (over 75%) of region-specific heirloom seeds. 
                   </li>
               </ul>
               </div>
