--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
     <!-- jquery link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--Fontawesome-->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
  
     <!--Google font-->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/robotech-gp" type="text/css" />
@@ -125,7 +126,9 @@ body {background-color:#c7cdd3;
           <div><p>For more information about the Green Revolution, 
             visit the <a href="https://livinghistoryfarm.org/farminginthe50s/crops-3/the-green-revolution/">
               <font color="#000000">Green Revolution</font></a>.
-          </p>
+             </p>
+             <p><i class="fas fa-play"></i></span><A href="hybridheirloom.html">
+              Hybrid vs. Heirloom Seeds</A></p>
           </div>
       
           </div>
