--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -15,7 +15,7 @@
     <!-- jquery link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--Fontawesome-->
- 
+    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
     <!--Google font-->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/robotech-gp" type="text/css" />
    
@@ -159,6 +159,8 @@ body {background-color:#c7cdd3;
 
               <img src="plant3.JPG" class="img-fluid" alt="Responsive image">
               </div>
+              <p><i class="fas fa-play"></i></span><A href="photos.html">
+                Gallery</A></p>
               
         </div>
     </div>
