--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -15,6 +15,7 @@
     <!-- jquery link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--Fontawesome-->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
  
     <!--Google font-->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/robotech-gp" type="text/css" />
@@ -121,6 +122,8 @@ body {background-color:#c7cdd3;
         <div class="animated pulse infinite"><strong>"You can't connect the dots looking forward, you can only connect the them looking
           backward"&#8212;Steve Jobs</strong>
         </div>
+        <p><i class="fas fa-play"></i></span><A href="feedthousandsofbees.html">
+          Feed Thousands of Bees</A></p>
     
 </div>
 </div>         
