--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -113,7 +113,8 @@ body {background-color:#c7cdd3;
               </div>
              
       <div><h2>What's On Our Food</h2></div>
-      <div>The advantage to growing high-quality food for bees is that you are helping you self have access to very best kind of food available. The following allows you to look up different foods and see the toxins commonly associated with commercially
+      <div>The advantage to growing high-quality food for bees is that you are helping you self have access to very best kind of food available. Clicking on the following graphic takes you
+        to a web site that allows you to look up different foods and see the toxins commonly associated with commercially
         grown food. <strong>#growyourown</strong>
       </div>
       
