--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -79,7 +79,7 @@ body {background-color:#c7cdd3;
             
             
             There are many advantages to having kitchen gardens, all of
-            which are hard to rank, but up at the top is feeding thousands of bees the heirloom pollen and nectar. 
+            which are hard to rank, but up at the top is feeding thousands of bees heirloom pollen and nectar. 
             <br><IMG SRC="2.gif">
         </p>
        </div>
