--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -134,7 +134,7 @@ body {background-color:#c7cdd3;
                   wildlife your 10' x 12' box supports. Our 10' x 12' garden box hosted aphids, 
                   ladybugs,
                   beatles, bees, snakes, and butterflies, to name a few. Standing near your box
-                   when it is buzzing with bees, knowing you created that happy and healthy buzz,
+                   when it is buzzing with bees, knowing you created that happy and healthy buzzing,
                   is a rewarding sound like no other. Binoculars are recommended kitchen
                   garden box accessories. Sitting and bee watching
                   is fascinating.</p>
@@ -148,9 +148,9 @@ body {background-color:#c7cdd3;
                     what's in your food.
                 </li>
                 <li>There is nothing tastier than homegrown, fresh heirloom
-                        vegetables.</li>
+                        produce.</li>
                 <li>Gardening is well known for its therapetic and healing qualities.</li>
-                <li>Excellent family activity.
+                <li>Is an excellent family activity and a fantastic way to spend time with your children.
                 </li>
                 <li>Provides excercise.</li>
             
