--- a/photos.html
+++ b/photos.html
@@ -82,7 +82,7 @@ body {background-color:#c7cdd3;
         bees.</font></h3>
     </p>
     <p class="page-description text-center"><h3><font color="#ffffff">Will you join us? Help us feed bees high-quality pollen and nectar.
-    Start your garden box today. Save bees by growing heirloom seeds and make the world a better place.</h3></font><br>
+    Start your garden box today. Help bees by growing heirloom seeds and make the world a better place.</h3></font><br>
     <p><font color="#ffffff">Click the first photo below to start the photo album.</font></p>
   
     
@@ -314,6 +314,6 @@ body {background-color:#c7cdd3;
                   <br> Images by <a href="http://www.instagram.com/_CynthiaLondon_" target="_blank">#_cynthialondon_</a> &hearts; </p>
         </div>
       </div>
-      <audio src="dotan.mp3" class-"music" controls autoplay></audio>
+      <audio src="dotan.mp3" class-"music" controls autoplay replay></audio>
     </body>
     </html>
